# financial-disclosure

./: .env.example  .gitignore  README.md  consolidate_transactions.py  pyproject.toml  requirements.txt
config/: accounts.yaml  accounts_sample.yaml  categories.yaml  manual_categories_sample.yaml  settings.yaml
docs/guides/: 01-quick-start.md  02-configuration.md  03-processing-workflow.md  04-account-management.md  05-category-corrections.md  06-ai-categorization.md  07-output-formats.md  08-cli-reference.md
docs/planning/: project-prompt.md
docs/planning/sprint-1-balance-mvp/: 01-set-balance-cli.md  02-interactive-balance-prompt.md  03-balance-inference.md  04-account-summary-sheet.md  05-opening-balance-row.md  06-documentation-update.md
docs/planning/sprint-2-crypto-model/: README.md
docs/planning/sprint-3-crypto-categorization/: README.md
docs/planning/sprint-4-crypto-output/: README.md
src/financial_consolidator/: __init__.py  __main__.py  cli.py  config.py
src/financial_consolidator/models/: __init__.py  account.py  category.py  report.py  transaction.py
src/financial_consolidator/output/: __init__.py  csv_exporter.py  excel_writer.py
src/financial_consolidator/parsers/: __init__.py  base.py  csv_parser.py  detector.py  excel_parser.py  ofx_parser.py  pdf_parser.py
src/financial_consolidator/processing/: __init__.py  anomaly_detector.py  balance_calculator.py  categorizer.py  correction_importer.py  deduplicator.py  normalizer.py  (+1 more)
test_data/: sample_bank_statement.csv
test_output/: analysis.xlsx  analysis_account_chase_checking.csv  analysis_all_transactions.csv  analysis_anomalies.csv  analysis_category_analysis.csv  analysis_pl_summary.csv
tests/: __init__.py  test_ai_categorizer.py  test_cli_set_balance.py  test_confidence.py  test_report_generator.py
(+12 files in other folders)
